--- a/src/sections/homeCataloguesSection/HomeCataloguesSection.module.scss
+++ b/src/sections/homeCataloguesSection/HomeCataloguesSection.module.scss
@@ -23,19 +23,7 @@
 .container {
   flex-direction: column;
   align-items: center;
-  gap: 16px;
-
-  @media screen and (min-width: $tablet) {
-    gap: 20px;
-  }
-
-  @media screen and (min-width: $laptop) {
-    gap: 24px;
-  }
-
-  @media screen and (min-width: $desktop) {
-    gap: 32px;
-  }
+  gap: $mobileGap;
 }
 
 .linkCatalogue {
